# ai-code-review-bench

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  new_challenge.md  new_tool.md
.github/workflows/: benchmark.yaml  ci.yaml  ci.yml
challenges/: README.md
challenges/_template/: challenge.yaml
challenges/hardcoded-secrets/: challenge.yaml
challenges/insecure-deserialization/: challenge.yaml
challenges/memory-leak-cache/: challenge.yaml
challenges/missing-await-async/: challenge.yaml
challenges/multi-file-refactoring/: challenge.yaml
challenges/n-plus-one-query/: challenge.yaml
challenges/off-by-one-pagination/: challenge.yaml
challenges/race-condition-counter/: challenge.yaml
challenges/sql-injection-django/: challenge.yaml
challenges/sql-injection-express/: challenge.yaml
challenges/typescript-type-safety/: challenge.yaml
challenges/xss-react-component/: challenge.yaml
docs/: adding-challenges.md  adding-tools.md  architecture-review.md  evaluation-methodology.md  index.html  roadmap.md  script.js  styles.css
docs/data/: benchmark-results.json
docs/site/: index.html  script.js  styles.css
results/: latest
scripts/: check_providers.py  process_historical.py  update_dashboard.py
src/code_review_benchmark/: __init__.py  __main__.py
tests/: test_builder.py  test_matcher.py  test_models.py  test_scorer.py
(+64 files in other folders)
